...
            android:id="@+id/client_avatar_date_appointment"
            android:layout_width="134dp"
            android:layout_height="134dp"
            android:layout_margin="8dp"
            android:padding="2dp"
            android:src="@drawable/client_avatar"
            app:layout_constraintBottom_toTopOf="@id/client_procedure_appointment_month_rv_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:strokeColor="?attr/editTextColor"
            app:strokeWidth="2dp" />
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_time_cl_date_appointment_rv_item"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_phone_appointment_month_rv_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/constraintLayout0">

            <TextView
                android:id="@+id/time_value_search"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_phone_appointment_month_rv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_vk_appointment_month_rv_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_time_cl_date_appointment_rv_item">

            <TextView
                android:id="@+id/procedure_value_search"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_vk_appointment_month_rv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_telegram_appointment_month_rv_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_phone_appointment_month_rv_child">

            <TextView
                android:id="@+id/phone_value_search"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_telegram_appointment_month_rv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_instagram_appointment_month_rv_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_vk_appointment_month_rv_child">

            <TextView
                android:id="@+id/client_vk_link_tv"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_instagram_appointment_month_rv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_whatsapp_appointment_month_rv_child"
            app:layout_constraintTop_toBottomOf="@+id/client_telegram_appointment_month_rv_child">

            <TextView
                android:id="@+id/client_telegram_link_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_whatsapp_appointment_month_rv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_notes_appointment_month_rv_child"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_instagram_appointment_month_rv_child">

            <TextView
                android:id="@+id/client_instagram_link_tv"
...
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/client_notes_appointment_month_rv_child"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/client_notes_cl_date_appointment_rv_item"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/client_whatsapp_appointment_month_rv_child">

            <TextView
                android:id="@+id/client_whatsapp_link_tv"
...
