...
        <!--Title-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/fragment_appointment_title_cl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            app:layout_constraintBottom_toTopOf="@id/fragment_add_row"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/fragment_appointment_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/add_appointment_title"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
...
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:text="@string/time"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@id/time_edit_text"
                    app:layout_constraintHorizontal_weight="5"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/time_edit_text"
...
                    android:id="@+id/client_avatar_date_appointment"
                    android:layout_width="125dp"
                    android:layout_height="125dp"
                    android:layout_margin="8dp"
                    android:padding="2dp"
                    android:src="@drawable/client_avatar"
                    app:layout_constraintBottom_toTopOf="@id/name_et"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:shapeAppearanceOverlay="@style/circleImageView"
                    app:strokeColor="?attr/editTextColor"
                    app:strokeWidth="2dp" />
...
                    app:layout_constraintBottom_toTopOf="@id/client_telegram_cl"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/client_phone_cl">

                    <EditText
                        android:id="@+id/client_vk_link_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_rectangle_shape"
                        android:hint="Вконтакте"
                        android:imeOptions="actionDone"
                        android:paddingStart="12dp"
...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_weight="8"
                    app:layout_constraintStart_toEndOf="@id/database_appointment_procedure"
                    app:layout_constraintTop_toTopOf="parent">

                    <EditText
                        android:id="@+id/procedure_et"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:background="@drawable/white_rectangle_shape"
                        android:hint="@string/example_procedure"
                        android:imeOptions="actionDone"
                        android:paddingStart="12dp"
...
