<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_calendar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.calendar.CalendarFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/month_constraint_layout"
...
            app:layout_constraintStart_toEndOf="@id/saturday"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout> <!--Week days-->

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/calendarRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/bold_borders"
        android:layoutAnimation="@anim/layout_animation"
        android:scrollbars="vertical"
...
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:fadeScrollbars="false"
        android:scrollbars="vertical"
        android:verticalScrollbarPosition="left"
        app:layout_constraintBottom_toTopOf="@+id/go_into_date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/day_off_cl" /><!--Short appointment view-->

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/go_into_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="24dp"
        android:contentDescription="@string/date_edit"
        android:src="@drawable/mini_fab"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
...
