...
    <string name="cancel__button">Cancel</string>
    <string name="avatar_description">clickable client avatar</string>
    <string name="date_edit">edit date</string>
    <string name="select_previous_month">select previous month</string>
    <string name="edit_appointment">edit appointment</string>
    <string name="delete_appointment">delete appointment</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="really_delete_text">Delete appointment?</string>
    <string name="calendar_cell_example">10</string>
    <string name="fragment_date_title">List of Appointments</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
...
    <string name="grant_permissions">Grant Access</string>
    <string name="menu_import_export">Import/Export</string>

    <string name="no_data_error">No data</string>

    <string name="update_app_toast">Download successful. Restarting app in 5 seconds</string>
    <string name="appointment_set_client_name">appointment set client name</string>
    <string name="appointment_set_time">appointment set time</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
...
